--- a/donate/btc.html
+++ b/donate/btc.html
@@ -7,28 +7,28 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout.1f819e44.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page.a9981ce8.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.7ea30e26.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.8aa09840.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.bd35ee46.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.b74ce320.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.1f6aa681.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.3f5916c5.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.e9ee0323.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.b3deb2ea.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.24dd2afc.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.56460d9b.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.891dc29c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/constants.f382b95a.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.9c4b141e.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/constants.9cd54588.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/main.c2ecaf00.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.7650be56.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/meta.cc1a1bf4.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.470efae5.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/meta.b9b36afe.js">
 		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.svelte.3a24f074.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.ts.2a94ee3f.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/_page.b6e15a60.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-1t4jq75_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/donate/btc"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/donate/btc"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-donate.png"><!-- HEAD_svelte-1t4jq75_END -->
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.ts.a25d66be.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/_page.a3a9e2f4.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-1t4jq75_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/donate/btc"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/donate/btc"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-donate.png"><!-- HEAD_svelte-1t4jq75_END -->
 	</head>
 	<body>
 		<div>
 
 
 <div class="grid-container svelte-80q6by"><div class="main-content svelte-80q6by">
-<h1>Bitcoin ❤️</h1>
+<h1>Bitcoin</h1>
 <p class="svelte-bzs1vh"><span class="svelte-bzs1vh">bc1q00fygpsvgxkxw3f04twwrjmlgh2amc6pm6mpjj</span>
 	<button aria-label="Скопировать" class="svelte-kzqxxw"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" aria-hidden="true" class="bx--snippet__icon" viewBox="0 0 32 32"><path d="M28 10v18H10V10h18m0-2H10a2 2 0 0 0-2 2v18a2 2 0 0 0 2 2h18a2 2 0 0 0 2-2V10a2 2 0 0 0-2-2Z"/><path d="M4 18H2V4a2 2 0 0 1 2-2h14v2H4Z"/></svg><!-- HTML_TAG_END -->
 	
@@ -56,7 +56,7 @@
 			
 			<script>
 				{
-					__sveltekit_vrjkhq = {
+					__sveltekit_etdpss = {
 						env: {},
 						assets: "/spblpr",
 						base: new URL("..", location).pathname.slice(0, -1),
@@ -66,10 +66,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.7ea30e26.js"),
-						import("../_app/immutable/entry/app.3f5916c5.js")
+						import("../_app/immutable/entry/start.8aa09840.js"),
+						import("../_app/immutable/entry/app.b3deb2ea.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_vrjkhq.element, {
+						kit.start(app, __sveltekit_etdpss.element, {
 							node_ids: [0, 2, 5],
 							data,
 							form: null,
