--- a/donate/long.html
+++ b/donate/long.html
@@ -8,19 +8,19 @@
 		<link href="../_app/immutable/assets/_layout.1f819e44.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page.11eea95a.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/link.3c7701a9.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.7ea30e26.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.8aa09840.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.bd35ee46.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.b74ce320.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.1f6aa681.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.3f5916c5.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.e9ee0323.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.b3deb2ea.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.24dd2afc.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.56460d9b.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.891dc29c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/constants.f382b95a.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.9c4b141e.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/constants.9cd54588.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/main.c2ecaf00.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.7650be56.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/meta.cc1a1bf4.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-long-page.svelte.1dc46db6.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.470efae5.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/meta.b9b36afe.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-long-page.svelte.8d8d701d.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/link.e45c2c54.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-1t4jq75_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/donate/long"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/donate/long"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-donate.png"><!-- HEAD_svelte-1t4jq75_END --><!-- HEAD_svelte-1oesfl4_START --><link rel="preconnect" href="https://www.patreon.com/spblpr"><link rel="preconnect" href="https://boosty.to/spblpr"><link rel="preconnect" href="https://t.me/donate?start=Y2hhcml0eV9pbnZvaWNlX3JlcXVlc3QtMzExNzA=-g7vK"><!-- HEAD_svelte-1oesfl4_END -->
 	</head>
 	<body>
@@ -60,7 +60,7 @@
 			
 			<script>
 				{
-					__sveltekit_vrjkhq = {
+					__sveltekit_etdpss = {
 						env: {},
 						assets: "/spblpr",
 						base: new URL("..", location).pathname.slice(0, -1),
@@ -70,10 +70,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.7ea30e26.js"),
-						import("../_app/immutable/entry/app.3f5916c5.js")
+						import("../_app/immutable/entry/start.8aa09840.js"),
+						import("../_app/immutable/entry/app.b3deb2ea.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_vrjkhq.element, {
+						kit.start(app, __sveltekit_etdpss.element, {
 							node_ids: [0, 2, 7],
 							data,
 							form: null,
