--- a/index.html
+++ b/index.html
@@ -2,26 +2,26 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="./favicon.png" />
+		<link rel="icon" href="/spblpr/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/0.B-jQS5f4.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/3.CnEBxXad.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/link.BfEjzs-W.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BA406T6g.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.OAAD-G-j.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.DJEsDRqV.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/control.CYgJF_JY.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.B6mcXPgw.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.UDOAXvno.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BL8S_Wnv.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/textData.Bx_FZ2i2.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Ber-_Zvi.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paymentData.DKj0TrwF.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/main.BLoaUCUo.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.JUcHAXHa.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/link.B9nYuwjB.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/meta.Bm-HfRzw.js"><title>ЛПР Петербург</title><!-- HEAD_svelte-1t4jq75_START --><meta name="title" content="ЛПР Петербург"><meta name="description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><meta property="og:url" content="https://yslpn.github.io/spblpr/"><meta property="og:type" content="website"><meta property="og:title" content="ЛПР Петербург"><meta property="og:description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><meta property="og:image" content="https://yslpn.github.io./og-main.png"><meta property="og:image:secure_url" content="https://yslpn.github.io./og-main.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/"><meta name="twitter:title" content="ЛПР Петербург"><meta name="twitter:description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><meta name="twitter:image" content="https://yslpn.github.io./og-main.png"><link rel="preconnect" href="https://lp-russia.org"><!-- HEAD_svelte-1t4jq75_END -->
+		<link href="/spblpr/_app/immutable/assets/0.B-jQS5f4.css" rel="stylesheet">
+		<link href="/spblpr/_app/immutable/assets/3.CnEBxXad.css" rel="stylesheet">
+		<link href="/spblpr/_app/immutable/assets/link.BfEjzs-W.css" rel="stylesheet">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/entry/start.LNvjuk6-.js">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/entry.CbJ-0dzX.js">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/scheduler.DJEsDRqV.js">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/control.CYgJF_JY.js">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/entry/app.CBPhEdmw.js">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/index.UDOAXvno.js">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/nodes/0.BisZWphZ.js">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/textData.Bx_FZ2i2.js">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/stores.Cr6nqXeF.js">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/paymentData.DKj0TrwF.js">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/main.BLoaUCUo.js">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/nodes/3.CdzlxnPJ.js">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/link.B9nYuwjB.js">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/meta.CH_-V82C.js"><title>ЛПР Петербург</title><!-- HEAD_svelte-1t4jq75_START --><meta name="title" content="ЛПР Петербург"><meta name="description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><meta property="og:url" content="https://yslpn.github.io/spblpr/"><meta property="og:type" content="website"><meta property="og:title" content="ЛПР Петербург"><meta property="og:description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><meta property="og:image" content="https://yslpn.github.io/spblpr/og-main.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-main.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/"><meta name="twitter:title" content="ЛПР Петербург"><meta name="twitter:description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-main.png"><link rel="preconnect" href="https://lp-russia.org"><!-- HEAD_svelte-1t4jq75_END -->
 
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z3GJ7K0BVN"></script>
@@ -40,8 +40,8 @@
 			
 			<script>
 				{
-					__sveltekit_ct893t = {
-						base: new URL(".", location).pathname.slice(0, -1),
+					__sveltekit_vovpjv = {
+						base: "/spblpr",
 						assets: "/spblpr"
 					};
 
@@ -50,8 +50,8 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BA406T6g.js"),
-						import("./_app/immutable/entry/app.B6mcXPgw.js")
+						import("/spblpr/_app/immutable/entry/start.LNvjuk6-.js"),
+						import("/spblpr/_app/immutable/entry/app.CBPhEdmw.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
