--- a/donate/dash.html
+++ b/donate/dash.html
@@ -7,20 +7,19 @@
 		
 		<link href="/spblpr/_app/immutable/assets/0.B-jQS5f4.css" rel="stylesheet">
 		<link href="/spblpr/_app/immutable/assets/5.DlVjN7Gu.css" rel="stylesheet">
-		<link rel="modulepreload" href="/spblpr/_app/immutable/entry/start.B6rC3UZb.js">
-		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/entry.DA6i9KXm.js">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/entry/start.ByDc34-N.js">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/entry.DA9vjTYx.js">
 		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/scheduler.DJEsDRqV.js">
 		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/control.CYgJF_JY.js">
-		<link rel="modulepreload" href="/spblpr/_app/immutable/entry/app.BMG0jM-X.js">
-		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/index.UDOAXvno.js">
-		<link rel="modulepreload" href="/spblpr/_app/immutable/nodes/0.C2WSDzAK.js">
-		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/textData.Bx_FZ2i2.js">
-		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/stores.Sr9ETnG4.js">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/entry/app.BMLIJijf.js">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/index.DyCb3nwA.js">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/nodes/0.BviMBMfH.js">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/stores.Dq54gOGp.js">
 		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/paymentData.DKj0TrwF.js">
 		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/main.BLoaUCUo.js">
-		<link rel="modulepreload" href="/spblpr/_app/immutable/nodes/2.CJdeW04n.js">
-		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/meta.BpwRQlkc.js">
-		<link rel="modulepreload" href="/spblpr/_app/immutable/nodes/5.DM5nG1eA.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-1t4jq75_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/donate/dash"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/donate/dash"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-donate.png"><!-- HEAD_svelte-1t4jq75_END -->
+		<link rel="modulepreload" href="/spblpr/_app/immutable/nodes/2.Cn4rgOiv.js">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/meta.DiLWsMZn.js">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/nodes/5.e_QLI06Q.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-1t4jq75_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/donate/dash"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/donate/dash"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-donate.png"><!-- HEAD_svelte-1t4jq75_END -->
 
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z3GJ7K0BVN"></script>
@@ -43,7 +42,7 @@
 			
 			<script>
 				{
-					__sveltekit_1u4uy7z = {
+					__sveltekit_1s5atjs = {
 						base: "/spblpr",
 						assets: "/spblpr"
 					};
@@ -53,8 +52,8 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("/spblpr/_app/immutable/entry/start.B6rC3UZb.js"),
-						import("/spblpr/_app/immutable/entry/app.BMG0jM-X.js")
+						import("/spblpr/_app/immutable/entry/start.ByDc34-N.js"),
+						import("/spblpr/_app/immutable/entry/app.BMLIJijf.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2, 5],
